# GGBot

./: .env.prod  README.md  pyproject.toml  test.py
GGBot/plugins/2d/: __init__.py
GGBot/plugins/60snews/: __init__.py
GGBot/plugins/setu/: __init__.py
GGBot/plugins/weather/: __init__.py
accounts/3599567010/: config.yml  device.json  session.token
accounts/3599567010/data/images/: 000006.ldb  000021.ldb  000024.ldb  000029.ldb  000032.ldb  000067.ldb  000086.ldb  000087.ldb  000090.ldb  000093.ldb  LOG  MANIFEST-000014  MANIFEST-000020  MANIFEST-000069  MANIFEST-000095
accounts/3599567010/data/leveldb-v3/: 000014.ldb  000015.ldb  000018.ldb  000087.ldb  000088.ldb  000091.ldb  000094.ldb  000104.ldb  000105.ldb  000108.ldb  000111.ldb  LOG  MANIFEST-000020  MANIFEST-000026  MANIFEST-000096  MANIFEST-000113
accounts/3599567010/data/videos/: LOG  MANIFEST-000063  MANIFEST-000075
accounts/binary/: accounts.json
